fixed the hieght of the cards to make them aligned

--- a/styles/style.css
+++ b/styles/style.css
@@ -247,6 +247,9 @@ input {
   flex-direction: column;
   height: 100%;
 }
+.CardTitle {
+  min-height: 52px;
+}
 
 .CourseImageWrap {
   position: relative;
@@ -295,12 +298,14 @@ input {
   color: var(--muted);
   margin-bottom: 10px;
   font-size: 14px;
+  min-height: 40px;
 }
 
 .CourseDesc {
   color: var(--muted);
   margin-bottom: 14px;
-  min-height: 48px;
+  min-height: 72px;
+  overflow: hidden;
 }
 
 .CourseBottom {
